--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
-        "illuminate/database": "^9.0|^10.0|^11.0|^12.0",
-        "illuminate/view": "^9.0|^10.0|^11.0|^12.0",
-        "illuminate/routing": "^9.0|^10.0|^11.0|^12.0"
+        "php": "^8.1"
     },
     "autoload": {
         "psr-4": {
